--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/ri.js"></script>
+    <script src="./ri.js"></script>
     <!-- <script src="a.js"></script> -->
-    <link rel="stylesheet" href="/ri.css">
+    <link rel="stylesheet" href="./ri.css">
 </head>
 <body onload="rl()">
     <h1 id="time"></h1>
