--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>没什么用的日历</title>
     <script src="./ri.js"></script>
     <!-- <script src="a.js"></script> -->
     <link rel="stylesheet" href="./ri.css">
